--- a/src/Form.module.scss
+++ b/src/Form.module.scss
@@ -46,6 +46,10 @@
     gap: 10px;
   }
   &__button {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
     background-color: var(--color-primary500);
     border: none;
     border-radius: 5px;
