--- a/src/views/account/settings/components/settingsForm/SettingsForm.module.scss
+++ b/src/views/account/settings/components/settingsForm/SettingsForm.module.scss
@@ -19,3 +19,19 @@
     border-radius: 5px;
   }
 }
+
+.columnContainer {
+  display: flex;
+  gap: 20px;
+  .container {
+    flex: 1;
+  }
+}
+
+.imageUploadContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 50%;
+  margin: 0 auto;
+}
