photowall upload component

--- a/src/Form.module.scss
+++ b/src/Form.module.scss
@@ -79,7 +79,11 @@
   }
   &__formGroup {
     display: flex;
-    gap: 10px; 
+    gap: 10px;
+
+    @include mobile {
+      flex-direction: column;
+    }
   }
   &__formContainer {
     display: flex;
