--- a/src/layout/page/Page.module.scss
+++ b/src/layout/page/Page.module.scss
@@ -7,10 +7,9 @@
   grid-template-rows: 70px auto;
 
   width: 100%;
-  height: 100dvh;
-  overflow: hidden;
+  height: 100%;
 
-  //   padding: 0 1rem;
+    // padding: 0 1rem;
   // background-color: #f5f5f5;
   //   height: 100%;
 
@@ -73,7 +72,7 @@
   }
   .content {
     background-color: $quintenary-color;
-    height: 100dvh;
+    height: 100%;
     grid-area: content;
 
     display: grid;
@@ -145,10 +144,8 @@
       align-items: center;
       justify-content: flex-start;
       flex-direction: column;
-      overflow-y: auto;
       padding-bottom: $header-height;
-      overflow-y: auto;
-
+      height: 100%;
       .childrenContainer {
         position: relative;
         padding: 20px;
