--- a/src/layout/searchWrapper/SearchWrapper.module.scss
+++ b/src/layout/searchWrapper/SearchWrapper.module.scss
@@ -73,3 +73,17 @@
     box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
   }
 }
+// This is for the item not being available
+.titleContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  padding: 2%;
+  background-color: var(--color-primary);
+  color: white;
+  border-radius: 20px;
+  h1 {
+    font-size: 1.5rem;
+  }
+}
