--- a/src/layout/searchWrapper/SearchWrapper.module.scss
+++ b/src/layout/searchWrapper/SearchWrapper.module.scss
@@ -24,6 +24,9 @@
         width: 40px;
         height: 40px;
         padding: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
 
         .icon {
           margin: 0;
