--- a/src/views/account/integrations/apps/_shared.module.scss
+++ b/src/views/account/integrations/apps/_shared.module.scss
@@ -7,11 +7,11 @@
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  background-color: #07223d;
+  background-color: var(--bg-color);
 }
 .logo {
   width: 100%;
-  height: auto;
+  height: 100px;
   object-fit: contain;
 }
 .title {
